--- a/movies.css
+++ b/movies.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap');
+import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -62,6 +62,11 @@ body {
 .info p {
     font-size: 14px;
     margin-top: 3px;
+    color: white;
+}
+
+.info h1{
+  color: white;
 }
 
 .info button {
@@ -90,4 +95,22 @@ body {
 
 .card-group:hover > .card:not(:hover) {
     filter: blur(5px);
+}
+.personal-info {
+    position: fixed;
+    bottom: 500px;
+    right:20%;
+    transform: translateX(-50%);
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.1);
+  
+    border-radius: 5px;
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    width: auto;
+}
+
+a{
+  color:white;
 }
